# director_boilerplate

./: .env.example  .gitignore  .gitkeep  .mcp.json.template  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  eslint.config.js  nx  nx.bat  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json
.github/instructions/: nx.instructions.md
.github/workflows/: ci.yaml
apps/mcp/cli_use/: README.md  glama.json  project.json  pyproject.toml
apps/mcp/cli_use/.github/workflows/: python-tests.yml
apps/mcp/cli_use/src/cli_use/: cli.py  server.py
apps/mcp/cli_use/tests/: test_cli_use.py
docs/: README.md
prompts/: ACTOR_MANAGEMENT.md  CODESPACE_BROWSER_MANAGEMENT.md  COMMUNICATION_PROTOCOL.md  ENVIRONMENT_SETUP.md  README.md
scripts/: claude-orchestration.sh  generate-mcp-config.sh  install-all.sh  run-with-env.sh  setup-environment.sh  start-public.sh
