[project]
name = "cli_use"
version = "0.2.4"
description = "Command line interface for MCP clients with secure execution and customizable security policies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.6.0", "uvicorn>=0.27.0", "starlette>=0.32.0", "click>=8.0.0", "aiohttp>=3.8.0", "aiogram>=3.0.0"]
authors = [
    { name = "Mladen", email = "fangs-lever6n@icloud.com" },
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cli_use = "cli_use:main"
cli_use_server = "cli_use.cli:cli"

[project.urls]
Homepage = "https://github.com/MladenSU/cli_use"
Documentation = "https://github.com/MladenSU/cli_use#readme"
Repository = "https://github.com/MladenSU/cli_use.git"
"Bug Tracker" = "https://github.com/MladenSU/cli_use/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_use"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"